@@ -17,17 +17,21 @@
   </properties>
 
   <build>
-    <plugins>
-        <!-- Maven Compiler Plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.11.0</version>
-            <configuration>
-                <source>${maven.compiler.source}</source>
-                <target>${maven.compiler.target}</target>
-            </configuration>
-        </plugin>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.11.0</version>
+    <configuration>
+        <source>17</source>
+        <target>17</target>
+        <compilerArgs>
+            --add-exports
+            jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+            --add-opens
+            jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+        </compilerArgs>
+    </configuration>
+</plugin>
         
         <!-- Maven Surefire Plugin -->
         <plugin>
